# omc-galaxy

./: .gitignore  Cargo.toml  Decisione_pianeta.md  README.md  main.tex  output_log.txt
logging_utils/: Cargo.toml
logging_utils/src/: lib.rs
orch-example/: Cargo.toml
orch-example/src/: main.rs
src/: lib.rs  main.rs
src/components/: energy_stacks.rs  explorer.rs  explorer_mattia.rs  explorer_tommy.rs  game_loop.rs  manual_explorer.rs  mod.rs  orchestrator.rs  planet.rs  tests.rs
src/components/mattia_explorer/: DOCUMENTAZIONE.md  README.md  ai_params.rs  bag.rs  buffers.rs  explorer_ai.rs  handlers.rs  helpers.rs  mod.rs  planet_info.rs  resource_management.rs  states.rs  tests.rs
src/components/mattia_explorer/test_topology_files/: t0.txt
src/components/orchestrator/: debug.rs  explorer_comms.rs  gui_comms.rs  handlers.rs  init.rs  macros.rs  mod.rs  planets_comms.rs  update.rs
src/components/tommy_explorer/: README.md  actions.rs  bag.rs  core.rs  explorer_ai.rs  mod.rs  state.rs  test.rs  topology.rs
src/components/tommy_explorer/handlers/: mod.rs  orchestrator.rs  planet.rs
src/messages/: mod.rs  ui_messages.rs
src/settings/: common.rs
src/utils/: mod.rs  registry.rs  state_enums.rs  types.rs
src/utils_planets/: mod.rs  registry.rs  types.rs
