[package]
name = "omc-galaxy"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
dotenv = "0.15"
common-game = "3.0.0"
logging_utils = { path = "logging_utils" }
black_adidas_shoe = {git = "https://github.com/black-adidas-shoe-org/planet.git" }
ciuc_planet = {git = "https://github.com/Pietro-Calvi/ciuc_planet.git"}
houston-we-have-a-borrow = {git="https://github.com/Houston-we-have-a-borrow/Planet.git", package="Planet"}
immutable_cosmic_borrow = {git="https://github.com/ImmutableCosmicBorrow/planet.git"}
one-million-crabs = { git = "https://github.com/Advance-Programming-2025/One_million_crabs.git" }
rustrelli = {git="https://github.com/Rustrelli/rustrelli.git"}
rusty-crab = {package = "rusty-crab-ap2025", version = "2.0.0-alpha.1"}
the-compiler-strikes-back = { git = "https://github.com/TheCompilerStrikesBackAP2025/TheCompilerStrikesBack.git"}


crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
# cargo-nextest = "0.9.116"
rustc-hash = "2.1.1"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"
env_logger = "0.11.8"

[features]
debug-prints = []
